Read time zone information from a monitoring_location endpoint and apply it to the time-series values, #258.